# first_selenium

./: .dockerignore  .env.test.example  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  projeto.py  pyproject.toml  temperature_selenium.py
.github/workflows/: ci.yml
src/: __main__.py
src/automation/flows/: crm_smoke.py
src/builder/: selenium_driver.py
src/core/: settings.py
src/core/config/: logging.py
src/execute/: runner.py
tests/: conftest.py
tests/integration/: test_crm_smoke.py
tests/unit/: test_flow_crm_smoke.py  test_main.py  test_runner.py  test_selenium_driver.py  test_settings.py  test_smoke.py
